# DuRFUnitI2C

./: .gitignore  CREDITS  DIY-Special-edition.md  LICENSE  QUICKSTART_PICO.txt  README.md  README_easy.txt  ftdi_i2c_bb.py  micropython_rfunit.py  micropython_rfunit.spec  pyinstaller.spec  pyproject.toml  requirements.txt  rfunit.py  rfunit_gui.py
.github/workflows/: pyinstaller.yml
editor/: README.md  pyproject.toml  requirements.txt  vpe.py  vpe_gui.py  vpe_gui.spec
notes/: General.md  Segment_Size_Research.md  isd9160fw_imhex.hexpat
src/: micropython_rfunit.py  rfunit.py  rfunit_gui.py  vpe_gui.py
