[project]
name = "durango-rfunit"
version = "2.0.0"
description = "Durango ISD9160 tooling"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "greatfet",
    "smbus2; sys_platform == 'linux'",
    "pyserial",
    "tqdm",
    "numpy>=2.4.4",
    "scipy>=1.17.1",
    "sounddevice>=0.5.5",
    "darkdetect>=0.8.0",
    "sv-ttk>=2.6.1",
    "fastcrc>=0.3.5"
]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]

[project.scripts]
rfunit-cli = "rfunit:main"
rfunit-gui = "rfunit_gui:main"
rfunit-micropython = "micropython_rfunit:main"
vpe-cli = "vpe:main"
vpe-gui = "vpe_gui:main"
pyboard = "vendor.pyboard:main"
